--- a/res/layout/activity_create_appointment.xml
+++ b/res/layout/activity_create_appointment.xml
@@ -36,13 +36,11 @@
             android:textSize="@dimen/text_small"
             android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/edit_appointment_clinic"
+        <Spinner
+            android:id="@+id/visit_clinic_spinner"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/padding_Xsmall"
-            android:hint="Enter Here"
-            android:inputType="text" />
+            android:layout_height="wrap_content" 
+            android:entries="@array/clinic_name_list" />
 
         <TextView
             android:id="@+id/text_appointment_date"
@@ -70,13 +68,11 @@
             android:textSize="@dimen/text_small"
             android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/edit_appointment_time"
+        <Spinner
+            android:id="@+id/visit_time_spinner"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/padding_Xsmall"
-            android:hint="hh:mm:ss"
-            android:inputType="time" />
+            android:layout_height="wrap_content" 
+            android:entries="@array/visit_time_list" />
 
         <TextView
             android:id="@+id/text_duration"
@@ -132,5 +128,4 @@
             android:background="@color/blue"
             android:text="@string/confirm_appointment" />
     </LinearLayout>
-
 </ScrollView>
