--- a/res/layout/activity_create_appointment.xml
+++ b/res/layout/activity_create_appointment.xml
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_Xsmall"
             android:hint="yyyy-mm-dd"
-            android:inputType="date" />
+            android:focusableInTouchMode="false" />
 
         <TextView
             android:id="@+id/text_appointment_time"
