--- a/res/layout/custom_alert.xml
+++ b/res/layout/custom_alert.xml
@@ -18,7 +18,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 	        android:layout_width="106dp"
 	        android:layout_height="90dp"
 	        android:layout_weight="1.0"
-	        android:src="@drawable/ic_launcher" />
+	        android:src="@drawable/calendar" />
     
     	<Button
 	        android:id="@+id/buttonAlert"
